# my_cpp_ml

./: CMakeLists.txt  README.md  main.cpp  mit.cpp
ANN/: ANN.cpp  ANN.h
Activation/: Activation.cpp  Activation.h
AutoEncoder/: AutoEncoder.cpp  AutoEncoder.h
Convolutions/: Convolutions.cpp  Convolutions.h
Cost/: Cost.cpp
Data/: Data.cpp  Data.h
Data/Datasets/: BreastCancerSVM.csv  CaliforniaHousing.csv  Wine.csv
DualSVC/: DualSVC.cpp  DualSVC.h
Easy_LR/: common.h  logisticregression.cpp  logisticregression.h
HiddenLayer/: HiddenLayer.cpp  HiddenLayer.h
KMeans/: KMeans.cpp  KMeans.h
LinAlg/: LinAlg.cpp  LinAlg.h
LinReg/: LinReg.cpp  LinReg.h
MLP/: MLP.cpp  MLP.h
OutputLayer/: OutputLayer.cpp  OutputLayer.h
PCA/: PCA.cpp  PCA.h
Regularization/: Reg.cpp
SVC/: SVC.cpp  SVC.h
SoftmaxNet/: SoftmaxNet.cpp
Stat/: Stat.cpp  Stat.h
Transforms/: Transforms.cpp  Transforms.h
Utilities/: Utilities.cpp  Utilities.h
kNN/: kNN.cpp  kNN.h
